Also send message via xmpp, if available

--- a/phony.ini
+++ b/phony.ini
@@ -13,6 +13,15 @@ smtp_password = password
 from = someaddress@example.com
 to = oneaddress@example.com, anotheraddress@example.com
 
+[xmpp]
+xmpp_host = host
+xmpp_port = port
+xmpp_resource = phony
+xmpp_username = username
+xmpp_password = password
+
+to = oneaddress@example.com, anotheraddress@example.com
+
 [template]
 # Available variables for the templates:
 #     count (int): The number of calls
