Telegram Bot Notification Support

--- a/phony.ini
+++ b/phony.ini
@@ -1,8 +1,10 @@
 # This is the configuration file for phony
 
+[DEFAULT]
+datetime_format = %d.%m.%Y %H:%M:%S
+
 [timestamp]
 timestamp_file = /tmp/phony
-datetime_format = %d.%m.%Y %H:%M:%S
 
 [mail]
 smtp_host = host:port
@@ -16,11 +18,16 @@ to = oneaddress@example.com, anotheraddress@example.com
 [xmpp]
 xmpp_host = host
 xmpp_port = port
+xmpp_security = true
 xmpp_resource = phony
 xmpp_username = username
 xmpp_password = password
 
 to = oneaddress@example.com, anotheraddress@example.com
+
+[telegram]
+token = token
+chat_id = chat_id
 
 [template]
 # Available variables for the templates:
